# Orione

./: .gitignore  MATERIALS.md  PINASSIGNMENT.md  README.md  TODO.md  firmware  vk  vk.c
USB-HID-emulator/: emulator.c  emulator_windows.c
chassis/: Chasis_Hor_1.stl  Chasis_Hor_2.stl
documents/: INFO.md  MATERIALS.md  TODO.md  UART.md
driver/: CMakeLists.txt
driver/install/: install-linux.sh  install-macos.sh  install-win64.ps1
driver/scripts/: build.sh  run.sh
driver/src/: main.c  orionev1-driver-linux.c  orionev1-driver-macos.c  orionev1-driver-win64.c  orionev1-macos-driver.c  orionev1-win64-driver.c
driver/src/archive/emulator/: emulator-macos.h
driver/src/core/: coordinates_helper.c  coordinates_helper.h  logging.c  logging.h
driver/src/core/hashmap/: hashmap.c  hashmap.h
driver/src/core/io/: input_device.h  uart.h
driver/src/core/set/: set.c  set.h
driver/src/emulator/: emulator-linux.c  emulator-linux.h  emulator-macos.c  emulator-macos.h  emulator-win64.h  emulator.c  emulator.h
driver/src/emulator/linux/: emulator.c  emulator.h
driver/src/emulator/macos/: emulator.c  emulator.h
driver/src/global/: global.h
driver/src/matrix/: keycode_conversion.c  keycode_conversion.h  keycodes.h  linux.h  linux.toml  macos.h  macos.toml  matrix.h  win64.h  windows.toml
driver/src/message/: message.c  message.h
driver/src/parser/: parser.c  parser.h
driver/src/platform/linux/: input_device.c  uart.c
driver/src/platform/macos/: input_device.c  uart.c
driver/src/platform/windows/: input_device.c  uart.c
driver/src/profile/: profile_manager.c  profile_manager.h
driver/src/ratelimiter/: rate_limiter.c  rate_limiter.h
driver/start/: start-linux.sh  start-macos.sh  start-win64.ps1
firmware/: CMakeLists.txt  main.c
firmware/src/: global.h  main.c
firmware/src/button/: button.c  button.h
firmware/src/global/: global.c  global.h
firmware/src/init/: init.c  init.h
firmware/src/interrupt/: interrupt.c  interrupt.h
firmware/src/interrupts/: interrupts.c  interrupts.h
firmware/src/matrix/: matrix.h
firmware/src/matrix/debouncing/: debouncing.c  debouncing.h
firmware/src/matrix/global/: global.c  global.h
firmware/src/matrix/interrupt/: interrupt.c  interrupt.h
firmware/src/matrix/keymap/: keymap.c  keymap.h
firmware/src/matrix/matrix/: matrix.c  matrix.h
firmware/src/matrix/scan_rows/: scan_rows.c  scan_rows.h
firmware/src/message/: message.c  message.h
firmware/src/rotary_encoder/: rotary_encoder.c  rotary_encoder.h
firmware/src/usb/usb_callbacks/: usb_callbacks.c  usb_callbacks.h
orione-v1-driver/install/: install-macos.sh
orione-v1-driver/src/: orionev1-linux-driver.c
pcb/: orione.kicad_pcb  orione.kicad_pro  orione.kicad_sch
pcb/assets/ilBuso/duck.pretty/: duck.kicad_mod
pcb/orione-v1/: orione-v1.kicad_pcb  orione-v1.kicad_pro  orione-v1.kicad_sch  switch-matrix.kicad_sch
pcb/orione-v1/production/: netlist.ipc
pcb/orione-v2/: key_matrix.kicad_sch  orione-v2-B_Cu.gbr  orione-v2-B_Mask.gbr  orione-v2-B_Paste.gbr  orione-v2-B_Silkscreen.gbr  orione-v2-Edge_Cuts.gbr  orione-v2-F_Cu.gbr  orione-v2-F_Mask.gbr  orione-v2-F_Paste.gbr  orione-v2-F_Silkscreen.gbr  orione-v2-job.gbrjob  orione-v2.kicad_pcb  orione-v2.kicad_pro  orione-v2.kicad_sch
pcb/orione-v2/greber/: orione-v2-B_Cu.gbr  orione-v2-B_Mask.gbr  orione-v2-B_Paste.gbr  orione-v2-B_Silkscreen.gbr  orione-v2-Edge_Cuts.gbr  orione-v2-F_Cu.gbr  orione-v2-F_Mask.gbr  orione-v2-F_Paste.gbr  orione-v2-F_Silkscreen.gbr  orione-v2-NPTH.drl  orione-v2-PTH.drl
pcb/production/: netlist.ipc
